# compute-share-on-premise

./: .env  .env.example  .env.local  .gitignore  AI_PROJECT_CONTEXT.md  README.md  package-lock.json  package.json
.github/workflows/: deploy-frontend.yml  deploy.yml
backend/: README.md  docker-compose.yml
backend/api/: .env.example  Dockerfile  main.py  nomad_client.py  pyproject.toml
backend/api/routers/: admin.py  jobs.py  metrics.py  nodes.py  trading.py
backend/dashboard/: index.html
backend/demo/: ai_workload.py  demo_runner.py  ml_training.py
backend/docker/: Dockerfile.nomad  entrypoint.sh
backend/headscale/config/: config.yaml
backend/installer/: install.sh
backend/jobs/: ai-inference.nomad.hcl  monitoring.nomad.hcl
backend/mock_data/: trading_metrics.json
backend/server/: nomad-server.hcl  start-server.sh
public/mock/: trading-metrics.json
src/app/: globals.css  page.tsx
src/app/admin/: page.tsx
src/app/base-layout/: page.tsx
src/app/dashboard/: layout.tsx  page.tsx
src/app/home/: HomePageClient.tsx  page.tsx
src/app/install/: route.ts
src/app/login/: LoginForm.tsx  page.tsx
src/app/register/: page.tsx
src/components/: AuthMainBackdrop.tsx  BaseLayout.tsx  CorimbLogoImg.tsx  Footer.tsx  Header.tsx  ResourceUsageChart.tsx  SideBarButton.tsx  SidebarToggleIcon.tsx  WorkspaceSidebar.tsx
src/components/admin/: AdminSidebar.tsx
src/components/dashboard/: DashboardBaseLayout.tsx  DashboardSidebar.tsx  DashboardStatsCards.tsx  GlobalNodeMap.tsx  (+1 more)
src/lib/: brand.ts  chart-config.ts  compute-api.ts  usage-metrics.ts
(+22 files in other folders)
